k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: registry.digitalocean.com/iskra-registry/project-api@sha256:eac661b8433a200dbec3957579a849b4d60a9893d8a425beac99fdc39ec024e4
          ports:
            - containerPort: 5000
