k8s/server.yml
### Deployment  ###
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: registry.digitalocean.com/iskra-registry/project-api@sha256:eac661b8433a200dbec3957579a849b4d60a9893d8a425beac99fdc39ec024e4
          ports:
            - containerPort: 5000
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 5000
      targetPort: 5000
